// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-map Renders \`field-map\` with custom props 1`] = `
<div
  class="v-list-group"
>
  <div
    aria-expanded="false"
    class="v-list-group__header v-list-item v-list-item--link theme--light"
    role="button"
    tabindex="0"
  >
    <div
      class="v-list-item__content widget-settings-item-title"
    >
      <div
        class="v-list-item__title validation-header"
      >
          Map
        <!---->
      </div>
    </div>
    <div
      class="v-list-item__icon v-list-group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    name="expand-transition"
  >
    <div
      class="v-list-group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <c-map-field-stub
          name="parameters.map"
          value="Value"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`field-map Renders \`field-map\` with default props 1`] = `
<div
  class="v-list-group"
>
  <div
    aria-expanded="false"
    class="v-list-group__header v-list-item v-list-item--link theme--light"
    role="button"
    tabindex="0"
  >
    <div
      class="v-list-item__content widget-settings-item-title"
    >
      <div
        class="v-list-item__title validation-header"
      >
          Map
        <!---->
      </div>
    </div>
    <div
      class="v-list-item__icon v-list-group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    name="expand-transition"
  >
    <div
      class="v-list-group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <c-map-field-stub
          name="parameters.map"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;
